--- a/confd/templates/nginx.tmpl
+++ b/confd/templates/nginx.tmpl
@@ -9,6 +9,8 @@ http {
     include       mime.types;
     default_type  application/octet-stream;
 
+    client_max_body_size 10G;
+
     sendfile        on;
     keepalive_timeout 65s;
 
