Lookup backends using SRV records

--- a/confd/templates/nginx.tmpl
+++ b/confd/templates/nginx.tmpl
@@ -8,6 +8,7 @@ events {
 http {
     include       mime.types;
     default_type  application/octet-stream;
+    server_tokens off;
 
     client_max_body_size 10G;
 
@@ -42,7 +43,10 @@ http {
     {{range $upstream := lsdir $upstream_dir}}
     upstream {{base $app}}_{{base $upstream}} { {{$backend_dir := printf "/lb/http/%s/upstreams/%s/backends/*" $app $upstream }}
         {{range $backend := gets $backend_dir }}
-        server {{.Value}};  # {{.Key}}{{end}}
+	{{range lookupSRV "" "" .Value}}
+	server {{.Target}}:{{.Port}};
+	{{end}}
+        {{end}}
     }
     {{end}}{{end}}
 }
