--- a/confd/templates/nginx.tmpl
+++ b/confd/templates/nginx.tmpl
@@ -8,7 +8,6 @@ events {
 http {
     include       mime.types;
     default_type  application/octet-stream;
-    server_tokens off;
 
     client_max_body_size 10G;
 
@@ -43,10 +42,7 @@ http {
     {{range $upstream := lsdir $upstream_dir}}
     upstream {{base $app}}_{{base $upstream}} { {{$backend_dir := printf "/lb/http/%s/upstreams/%s/backends/*" $app $upstream }}
         {{range $backend := gets $backend_dir }}
-	{{range lookupSRV "" "" .Value}}
-	server {{.Target}}:{{.Port}};
-	{{end}}
-        {{end}}
+        server {{.Value}};  # {{.Key}}{{end}}
     }
     {{end}}{{end}}
 }
