--- a/confd/templates/nginx.tmpl
+++ b/confd/templates/nginx.tmpl
@@ -8,6 +8,7 @@ events {
 http {
     include       mime.types;
     default_type  application/octet-stream;
+    server_tokens off;
 
     client_max_body_size 10G;
 
