Convert domain names to IPs so nginx gets reloaded when containers move between hosts

--- a/confd/templates/nginx.tmpl
+++ b/confd/templates/nginx.tmpl
@@ -42,11 +42,8 @@ http {
     }
     {{range $upstream := lsdir $upstream_dir}}
     upstream {{base $app}}_{{base $upstream}} { {{$backend_dir := printf "/lb/http/%s/upstreams/%s/backends/*" $app $upstream }}
-        {{range $backend := gets $backend_dir }}
-	{{range lookupSRV "" "" .Value}}
-	server {{.Target}}:{{.Port}};
-	{{end}}
-        {{end}}
+        {{range $backend := gets $backend_dir }}{{range lookupSRV "" "" .Value}}{{range lookupIP .Target}}
+	server {{.}}:{{.Port}};{{end}}{{end}}{{end}}
     }
     {{end}}{{end}}
 }
